fix alignment of the copy-link input field. #27625297

--- a/app/assets/stylesheets/chrome.css
+++ b/app/assets/stylesheets/chrome.css
@@ -563,9 +563,6 @@ a.reply-link:hover {
 .social .sharing li {
   margin: 0;
 }
-.social .sharing li {
-  display: inline;
-}
 .social .sharing li a {
   float: left;
   width: 22px;
@@ -885,14 +882,10 @@ and (max-device-width : 480px) {
     display:none;
   }
 
-  .social .sharing .copy-link {
-    font-size: 1.2em;
-    width:90px;
-  }
-
   .information-panel-content .feature.show { top: 38px; }
   .information-panel .social { height: 37px; }
   .social .sharing { margin-top: 8px; width: auto; }
+  .social .sharing li { display: inline; }
   .social .sharing li a { margin: 0 5px 0 0; }
   .social .sharing li a.link { display: none; }
   .social .sharing li a.email { clear: none;  }
